remove errors